[Linux/Wayland] Firefox crashes when dragging a tab
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox-esr140 | --- | unaffected |
| firefox140 | --- | unaffected |
| firefox141 | --- | unaffected |
| firefox142 | + | verified |
People
(Reporter: atrif, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Crash Data
Attachments
(1 file)
Found in
- 142.0a1 (2025-07-09)
Affected versions
- 142.0a1 (2025-07-09)
Tested platforms
- Affected platforms: Ubuntu 24 Wayland/ Ubuntu 22 Wayland
- Unaffected platforms: Windows 10x6, macOS
Steps to reproduce
- Drag a tab.
Expected result
- No crash.
Actual result
- Firefox crashes.
Regression range
- Mozregression points at bug 1975823.
Additional Notes
- On X11, Firefox window disappears and reappears after the tab is dropped.
Comment 1•1 year ago
•
|
||
Could you share the crash ID, from about:crashes?
EDIT: Is it one of https://crash-stats.mozilla.org/signature/?signature=wl_proxy_get_user_data%20%7C%20gdk_wayland_device_get_wl_keyboard ?
| Reporter | ||
Comment 2•1 year ago
•
|
||
(In reply to Rob Wu [:robwu] from comment #1)
Could you share the crash ID, from about:crashes?
EDIT: Is it one of https://crash-stats.mozilla.org/signature/?signature=wl_proxy_get_user_data%20%7C%20gdk_wayland_device_get_wl_keyboard ?
Hello! This is the one: https://crash-stats.mozilla.org/report/index/bp-41c4bbd4-422b-4a13-90a4-3200e0250710
Comment 3•1 year ago
|
||
:emilio, since you are the author of the regressor, bug 1975823, could you take a look?
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 4•1 year ago
|
||
Trivially restores pre-regression behavior, for now.
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
I'll post a trivial patch to restore pre-regression behavior for now. The root cause should be dug into more tho.
Comment 6•1 year ago
|
||
Comment 0 says X11 sees the window reappear but for me the previous window goes away and never returns. Nothing in History / Recently Closed Windows, nothing in about:crashes.
Nightly automatic updates should be disabled as this causes a major data loss.
Nightly updates are stopped until this gets merged
Comment 10•1 year ago
|
||
| bugherder | ||
| Reporter | ||
Comment 11•1 year ago
|
||
Verified fixed with Firefox 142.0a1 (20250710100106) from comment 10 on Windows 10x64, macOS 12, and Ubuntu 24 Wayland/ X11. There are no crashes or disappearing windows when dragging pinned or regular tabs, in vertical or horizontal mode.
| Reporter | ||
Updated•1 year ago
|
Comment 12•1 year ago
|
||
| bugherder | ||
Description
•