Bug 1976623 - Create drag popups eagerly for now. r=tnikkel,layout-reviewers

Trivially restores pre-regression behavior, for now.

Differential Revision: https://phabricator.services.mozilla.com/D256769