layout/xul/nsMenuPopupFrame.h
@@ -202,6 +202,9 @@ class nsMenuPopupFrame final : public nsBlockFrame {
 
   bool HasRemoteContent() const;
 
+  // Whether this is a drag popup to show drag feedback.
+  bool IsDragPopup() const;
+
   // Whether we should have a widget even when we're not shown.
   bool ShouldHaveWidgetWhenHidden() const;
 
